[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.6.1",
    "crewai-tools==1.6.1",
    "jupyterlab>=4.4.8",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai==3.2.0",
    "langchain-openai==1.1.0",
    "mcp>=1.22.0",
    "openai>=1.109.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.14.7",
]
